# WolfVision

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  dependencies.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake.yml
Camera/Data/: 040103120490.mvdat  048021610079.mvdat
base/: wolfvision.cpp  wolfvision.hpp
configs/angle_solve/: basic_pnp_config.xml
configs/armor/: basic_armor_config.xml
configs/buff/: basic_buff_config.xml
configs/camera/: mv_camera_config_337.xml  mv_camera_config_359.xml  mv_camera_config_407.xml
configs/camera/cameraParams/: README.md  cameraParams_1333.xml  cameraParams_554.xml  cameraParams_555.xml  cameraParams_994.xml
configs/engineering/: voc_classes.txt  yolov3-tiny.cfg
configs/ml/: onnx_inferring_config.xml
configs/record/: record_mode.xml  record_mode.yaml  recordpath_save.yaml
configs/serial/: uart_serial_config.xml
devices/camera/: mv_video_capture.cpp  mv_video_capture.hpp
devices/realsense/: depth_camera.cpp  depth_camera.hpp
devices/serial/: can_bus.cpp  can_bus.hpp  uart_serial.cpp  uart_serial.hpp
docs/: README.md
docs/devices/: mv_video_capture.md  uart_serial.md
docs/module/: angle_solve.md  armor.md  buff.md  filter.md  ml.md  record.md  roi.md
module/angle_solve/: abstract_pnp.hpp  basic_pnp.cpp  basic_pnp.hpp
module/armor/: abstract_armor.hpp  basic_armor.cpp  basic_armor.hpp  fan_armor.cpp  fan_armor.hpp
module/blade/: abstract_blade.hpp  basic_blade.cpp  basic_blade.hpp
module/buff/: abstract_blade.hpp  abstract_buff.hpp  abstract_center_r.hpp  abstract_object.hpp  abstract_target.hpp  basic_buff.cpp  basic_buff.hpp
module/engineering/: yolov3_dnn.cpp  yolov3_dnn.hpp
module/filter/: abstract_kalman.hpp  basic_kalman.cpp  basic_kalman.hpp
module/ml/: onnx_inferring.cpp  onnx_inferring.hpp  yolov4_dnn.hpp
module/object_detection/: abstract_dnn.hpp  yolov4_dnn.cpp  yolov4_dnn.hpp
module/record/: record.cpp  record.hpp
module/roi/: abstract_roi.hpp  basic_roi.cpp  basic_roi.hpp
scripts/: autoconfig.sh  autolocalconfig.sh  cpplint-pre-commit.sh  install-librealsense.sh  watch_dog.sh
test/test_camera/: CMakeLists.txt  test_camera.cpp
utils/: circle_info.hpp  fps.hpp  points_info.hpp  reset_mv_camera.hpp
